Fixes minor changes
